--- a/main.css/main.css
+++ b/main.css/main.css
@@ -59,7 +59,7 @@ color: #fdff73;
 }
 .header {
   padding-bottom: 700px;
-  background-image: url(/imags/image-01.jpg);
+  background-image: url(../imags/image-01.jpg);
   background-size: cover;
 }
 .header h2 {
@@ -97,7 +97,7 @@ color: #fdff73;
 .about {
   
   padding-bottom: 700px;
-  background-image: url(/imags/image-02.jpg);
+  background-image: url(../imags/image-02.jpg);
   background-size: cover;
 }
 .about .text {
@@ -157,7 +157,7 @@ color: #fdff73;
 .our {
   
   padding-bottom: 700px;
-  background-image: url(/imags/image-03.jpg);
+  background-image: url(../imags/image-03.jpg);
   background-size: cover;
 }
 .our .text {
@@ -198,7 +198,7 @@ color: #fdff73;
 .Testimonials{
   padding-bottom: 100px;
   padding-top: 100px;
-  background-image: url(/imags/image-04.jpg);
+  background-image: url(../imags/image-04.jpg);
 }
 .Testimonials .row{
   padding: 50px;
@@ -225,7 +225,7 @@ padding: 10px;
 }
 .Contact{
   padding-bottom: 699px;
-  background-image: url(/imags/image-05.jpg);
+  background-image: url(../imags/image-05.jpg);
   background-size: cover;
 }
 .Contact .row .form {
