--- a/main.css/main.css
+++ b/main.css/main.css
@@ -9,7 +9,6 @@ body {
   padding-right: 0;
   margin-top: 0;
   margin-bottom: 0;
-  
 }
 html {
   scroll-behavior: smooth;
@@ -26,7 +25,6 @@ a {
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.5);
-  
 }
 
 .navbar .nav-link {
@@ -36,8 +34,8 @@ a {
 .navbar .nav-link.active {
   color: var(--main-color);
 }
-.navbar .nav-link:hover{
-color: #fdff73;
+.navbar .nav-link:hover {
+  color: #fdff73;
 }
 .header {
   padding-bottom: 700px;
@@ -63,36 +61,30 @@ color: #fdff73;
   color: white;
   font-size: 30px;
 }
-@media (max-width:767px) {
-  .header p{
-   position: absolute;
-    top: 67%;
+@media (max-width: 767px) {
+  .header p {
+    top: 75%;
     left: 58%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    color: white;
-    font-size: 29px;
-    margin: -24px;
+    margin: -27px;
+    
   }
-  
 }
 .about {
-  
   padding-bottom: 700px;
   background-image: url(../imags/image-02.jpg);
   background-size: cover;
 }
 .about .text {
-    text-align: right;
-    background-color: hsl(0deg 0% 1% / 50%);
-    width: 459px;
-    height: 700px;
-    right: 95px;
-    position: absolute;
-    padding: 15px;
+  text-align: right;
+  background-color: hsl(0deg 0% 1% / 50%);
+  width: 459px;
+  height: 700px;
+  right: 95px;
+  position: absolute;
+  padding: 15px;
 }
-@media (max-width:767px) {
-  .about .text{
+@media (max-width: 767px) {
+  .about .text {
     text-align: right;
     background-color: hsl(0deg 0% 1% / 50%);
     width: 459px;
@@ -100,173 +92,166 @@ color: #fdff73;
     right: 0px;
     position: absolute;
     padding: 7px;
-}
+    margin: -1px;
   }
-  
+}
 
 .about .text h2 {
   font-size: 35px;
   padding: 10px;
   margin-top: 17px;
   color: var(--main-color);
-
 }
-@media (max-width:767px) {
-  .about .text h2{
-   font-size: 32px;
-  padding: 10px;
-  margin-top: 17px;
-  color: var(--main-color);
-}
+@media (max-width: 767px) {
+  .about .text h2 {
+    font-size: 29px;
+    
   }
-  
-.about .text p{
+}
+
+.about .text p {
   line-height: 1.6;
   font-size: 20px;
   color: white;
 }
-@media (max-width:767px) {
-  .about .text p{
-   line-height: 1.6;
+@media (max-width: 767px) {
+  .about .text p {
+    line-height: 1.6;
     font-size: 17px;
     color: white;
-    padding-left: 53px;
+    padding-left: 81px;
     text-align: center;
-}
   }
+}
 
 /* end about */
 .our {
-  
   padding-bottom: 700px;
   background-image: url(../imags/image-03.jpg);
   background-size: cover;
 }
 .our .text {
-    text-align: left;
-    background-color: hsl(0deg 0% 1% / 50%);
-    width: 459px;
-    height: 700px;
-    left: 95px;
-    position: absolute;
-    padding: 15px;
-}
-@media (max-width:767px) {
-  .our .text{
+  text-align: left;
   background-color: hsl(0deg 0% 1% / 50%);
-    width: 413px;
+  width: 459px;
+  height: 700px;
+  left: 95px;
+  position: absolute;
+  padding: 15px;
+}
+@media (max-width: 767px) {
+  .our .text {
+    background-color: hsl(0deg 0% 1% / 50%);
+    width: 401px;
     height: 700px;
     left: 1px;
     position: absolute;
     padding: -13px;
     text-align: center;
-}
   }
+}
 
 .our .text h2 {
   font-size: 35px;
   padding: 10px;
   margin-top: 17px;
   color: var(--main-color);
-
 }
-.our .text p{
+.our .text p {
   font-weight: 300;
-    line-height: 1.8;
-    margin-bottom: 35px;
-    color: white;
-    font-size: 22px;
-}
-.Testimonials{
-  padding-bottom: 100px;
-  padding-top: 100px;
-  background-image: url(../imags/image-04.jpg);
-}
-.Testimonials .row{
-  padding: 50px;
-  
+  line-height: 1.8;
+  margin-bottom: 35px;
+  color: white;
+  font-size: 22px;
 }
 @media (max-width:767px) {
-  .row>*{
-  margin-bottom: 15px;
-}
+  .our .text p{
+    padding-right: 23px;
   }
+  
+}
+.Testimonials {
+  padding-bottom: 700px;
+  background-image: url(../imags/image-04.jpg);
+}
+.Testimonials .row {
+  padding: 50px;
+}
+@media (max-width: 767px) {
+  .row > * {
+    margin-bottom: 15px;
+  }
+}
 
-
-.Testimonials .one{
+.Testimonials .one {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
 }
-.Testimonials .two{
+.Testimonials .two {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
 }
-.Testimonials .three{
-background-color:rgba(0, 0, 0, 0.5) ;
-padding: 10px;
+.Testimonials .three {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
 }
-.Contact{
-  padding-bottom: 699px;
+.Contact {
+  padding-bottom: 700px;
   background-image: url(../imags/image-05.jpg);
   background-size: cover;
 }
 .Contact .row .form {
   position: absolute;
   right: 69px;
-  padding: 165px 62px;
+  padding: 120px 62px;
   background-color: rgba(0, 0, 0, 0.5);
-
 }
-@media (max-width:767px) {
- .Contact .row .form{
-  position: absolute;
-    right: -2px;
-    padding: 177px 62px;
+@media (max-width: 767px) {
+  .Contact .row .form {
+    position: absolute;
+    right:2px;
+    padding: 177px 22px;
     background-color: rgba(0, 0, 0, 0.5);
-}
   }
+}
 .Contact .row .form h2 {
   color: #fdff73;
-    font-size: 40px;
-    margin-bottom: 22px;
-    margin-top: -25px;
+  font-size: 40px;
+  margin-bottom: 22px;
+  margin-top: -25px;
 }
-.Contact .row .form .t{
+.Contact .row .form .t {
   margin-bottom: 30px;
   padding: 10px 65px;
   border: 2px solid #404076;
 }
-.Contact .row .form .t:focus{
+.Contact .row .form .t:focus {
   outline: none;
 }
-.Contact .row .form .u{
-  padding:29px 73px;
+.Contact .row .form .u {
+  padding: 29px 73px;
   margin-bottom: 30px;
 }
-.Contact .row .copy{
+.Contact .row .copy {
   position: relative;
 }
-.Contact .row .copy p{
-      top: 651px;
-    position: absolute;
-    color: white;
-    font-size: 16px;
-    padding: 7px;
-    left: -85px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-@media (max-width:767px) {
- .Contact .row .copy p{
+.Contact .row .copy p {
   top: 651px;
+  position: absolute;
+  color: white;
+  font-size: 16px;
+  padding: 7px;
+  left: -29px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+@media (max-width: 767px) {
+  .Contact .row .copy p {
+    top: 651px;
     position: absolute;
     color: white;
     font-size: 16px;
     padding: 7px;
     left: 2px;
     background-color: rgba(0, 0, 0, 0.5);
-}
   }
-
-
-
-
+}
