--- a/main.css/main.css
+++ b/main.css/main.css
@@ -1,15 +1,17 @@
-
 :root {
   --main-background: rgba(0, 0, 0, 0.5);
   --main-color: #fdff73;
 }
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body {
   font-family: "Open Sans", sans-serif;
-  padding-left: 0;
-  padding-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-
+}
+.container {
+  margin: auto;
 }
 html {
   scroll-behavior: smooth;
@@ -21,8 +23,6 @@ ul {
 a {
   text-decoration: none;
 }
-
-
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.5);
@@ -39,7 +39,7 @@ a {
   color: #fdff73;
 }
 .header {
-  padding-bottom: 700px;
+  padding: 50px 0;
   background-image: url(../imags/image-01.jpg);
   background-size: cover;
 }
@@ -50,129 +50,72 @@ a {
   transform: translate(-50%, -50%);
   z-index: 1;
   color: white;
-  font-size: 80px;
+  font-size: 60px;
   font-weight: bold;
 }
 .header p {
   position: absolute;
-  top: 58%;
+  top: 63%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
   color: white;
   font-size: 30px;
 }
-@media (max-width: 767px) {
-  .header p {
-    top: 75%;
-    left: 58%;
-    margin: -27px;
-    
-  }
-}
-
-.our {
-  padding-bottom: 700px;
-  background-image: url(../imags/image-03.jpg);
-  background-size: cover;
-}
-.our .text {
-  text-align: left;
-  background-color: hsl(0deg 0% 1% / 50%);
-  width: 459px;
-  height: 700px;
-  left: 95px;
-  position: absolute;
-  padding: 15px;
-}
-@media (max-width: 767px) {
-  .our .text {
-    background-color: hsl(0deg 0% 1% / 50%);
-    width: 401px;
-    height: 700px;
-    left: 1px;
-    position: absolute;
-    padding: -13px;
-    text-align: center;
-  }
-}
 
 
-.our .text h2 {
-  font-size: 35px;
-  padding: 10px;
-  margin-top: 17px;
-  color: var(--main-color);
-}
-.our .text p {
-  font-weight: 300;
-  line-height: 1.8;
-  margin-bottom: 35px;
-  color: white;
-  font-size: 22px;
-}
-@media (max-width:767px) {
-  .our .text p{
-    padding-right: 23px;
-  }
-  
-}
 .about {
-  padding-bottom: 700px;
+  padding: 50px 0;
   background-image: url(../imags/image-04.jpg);
   background-size: cover;
 }
-.about .text {
-  text-align: left;
-  background-color: hsl(0deg 0% 1% / 50%);
-  width: 459px;
-  height: 700px;
-  right: 95px;
-  position: absolute;
-  padding: 15px;
+.about .text{
+  text-align: center;
+    background-color:rgba(0, 0, 0, 0.5);
+    padding: 18px 46px;
+    height: 438px;
+    width: 343px;
+    float: right;
 }
-@media (max-width: 767px) {
-  .about .text {
-    background-color: hsl(0deg 0% 1% / 50%);
-    width: 401px;
-    height: 700px;
-    right: 1px;
-    position: absolute;
-    padding: -13px;
-    text-align: center;
-  }
-}
-.about .text h2 {
-  font-size: 29px;
-  padding: 10px;
-  margin-top: 17px;
+.about .text h2{
+  font-size: 18px;
   color: var(--main-color);
+  font-weight: bold;
 }
-.about .text p {
-  font-weight: 300;
-  line-height: 1.8;
-  margin-bottom: 35px;
-  color: white;
-  font-size: 22px;
+.about .text p{
+  color: #fff;
+  line-height: 1.6;
 }
-@media (max-width:767px) {
-  .about .text p{
-    padding-right: 23px;
-  }
-  
+
+.our {
+  padding: 50px 0;
+  background-image: url(../imags/image-03.jpg);
+  background-size: cover;
 }
+.our .text{
+  text-align: center;
+    background-color:rgba(0, 0, 0, 0.5);
+    padding: 18px 46px;
+    height: 438px;
+    width: 343px;
+    float: left;
+}
+.our .text h2{
+  font-size: 18px;
+  color: var(--main-color);
+  font-weight: bold;
+}
+.our .text p{
+  color: #fff;
+  line-height: 1.6;
+}
+
 .Testimonials {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding: 50px 0;
   background-image: url(../imags/image-04.jpg);
 }
 .Testimonials .row {
   padding: 50px;
-}
-@media (max-width: 767px) {
-  .row > * {
-    margin-bottom: 15px;
-  }
 }
 
 .Testimonials .one {
@@ -188,62 +131,47 @@ a {
   padding: 10px;
 }
 .Contact {
-  padding-bottom: 700px;
+  padding: 50px 0;
   background-image: url(../imags/image-05.jpg);
   background-size: cover;
 }
 .Contact .row .form {
-  position: absolute;
-  right: 69px;
-  padding: 120px 62px;
-  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+    background-color:rgba(0, 0, 0, 0.5);
+    padding: 18px 46px;
+    height: 438px;
+    width: 343px;
+    float: right;
 }
-@media (max-width: 767px) {
-  .Contact .row .form {
-    position: absolute;
-    right:27px;
-    padding: 160px 40px;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-}
+
 .Contact .row .form h2 {
   color: #fdff73;
-  font-size: 40px;
+  font-size: 30px;
   margin-bottom: 22px;
-  margin-top: -25px;
 }
 .Contact .row .form .t {
   margin-bottom: 30px;
-  padding: 10px 65px;
+  padding: 10px 40px;
   border: 2px solid #404076;
 }
 .Contact .row .form .t:focus {
   outline: none;
 }
 .Contact .row .form .u {
-  padding: 29px 73px;
+  padding: 29px 50px;
   margin-bottom: 30px;
 }
 .Contact .row .copy {
   position: relative;
 }
 .Contact .row .copy p {
-  top: 651px;
-  position: absolute;
-  color: white;
-  font-size: 16px;
-  padding: 7px;
-  left: -29px;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-@media (max-width: 767px) {
-  .Contact .row .copy p {
-    top: 630px;
+  text-align: center;
+    text-align: center;
+    float: left;
+    bottom: -484px;
     position: absolute;
-    color: white;
-    font-size: 16px;
-    padding: 7px;
-    left: 27px;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
+    padding-left: 45px;
+    color: #fff;
+    background-color:  rgba(0, 0, 0, 0.5);
 }
+
