--- a/main.css/main.css
+++ b/main.css/main.css
@@ -62,6 +62,12 @@ a {
   color: white;
   font-size: 30px;
 }
+@media (max-width:767) {
+  .header p{
+    top: 65%;
+  }
+  
+}
 
 
 .about {
@@ -153,6 +159,12 @@ a {
   margin-bottom: 30px;
   padding: 10px 40px;
   border: 2px solid #404076;
+}
+@media (max-width:767px) {
+  .Contact .row .form .t{
+    padding: 10px 36px
+  }
+  
 }
 .Contact .row .form .t:focus {
   outline: none;
