--- a/main.css/main.css
+++ b/main.css/main.css
@@ -62,7 +62,7 @@ a {
   color: white;
   font-size: 30px;
 }
-@media (max-width:767) {
+@media (max-width:767px) {
   .header p{
     top: 65%;
   }
@@ -146,7 +146,7 @@ a {
     background-color:rgba(0, 0, 0, 0.5);
     padding: 18px 46px;
     height: 438px;
-    width: 343px;
+    width: 345px;
     float: right;
 }
 
